--- a/public/login.html
+++ b/public/login.html
@@ -2,14 +2,17 @@
 <html lang="en">
 
 <head>
-  <title>Passport Authentication</title>
+  <title>Login Form</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" />
+
   <link href="stylesheets/style.css" rel="stylesheet">
 </head>
 
-<body>
+<body id="loginPage">
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -19,17 +22,33 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h2>Login Form</h2>
+        <!-- <h2>Login Form</h2> -->
         <form class="login">
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="email-input" placeholder="Email">
+          <fieldset>
+            <legend class="legend">Login</legend>
+
+            <!-- <div class="form-group"> -->
+            <!-- <label for="exampleInputEmail1">Email address</label> -->
+            <div class="form-group">
+              <input type="email" class="form-control" id="email-input" placeholder="Email">
+              <!-- <span><i class="fa fa-envelope"></i></span> -->
+            </div>
+            <!-- </div> -->
+
+            <div class="form-group">
+              <!-- <label for="exampleInputPassword1">Password</label> -->
+              <input type="password" class="form-control" id="password-input" placeholder="Password">
+            </div>
+            <button type="submit" class="btn btn-default" id="login">
+              <div class="pvw-title"><span><i class="fa fa-long-arrow-right"></span></i></div>
+            </button>
+          </fieldset>
+          <div class="feedback">
+            <p>
+              login successful <br />
+              redirecting...
+            </p>
           </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="password-input" placeholder="Password">
-          </div>
-          <button type="submit" class="btn btn-default">Login</button>
         </form>
         <br />
         <p>Or sign up <a href="/">here</a></p>
