--- a/public/members.html
+++ b/public/members.html
@@ -21,8 +21,14 @@
 </nav>
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
+      <div class="col-md-6 col-md-offset-6">
         <h2>Welcome <span class="member-name"></span></h2>
+      </div>
+      <div class="d-grid gap-2">
+        <!-- <button class="btn fav-button btn-primary" type="button">Favorites</button> -->
+        <a href="/home"><button class="btn">Favorites</button></a>
+        <!-- <a href="/"><button class="btn"></button></a>
+        <a href="/"><button class="btn"></button></a> -->
       </div>
     </div>
   </div>
