--- a/public/login.html
+++ b/public/login.html
@@ -30,14 +30,14 @@
             <!-- <div class="form-group"> -->
             <!-- <label for="exampleInputEmail1">Email address</label> -->
             <div class="form-group">
-              <input type="email" class="form-control" id="email-input" placeholder="Email">
+              <input type="text" class="form-control" id="email-input" placeholder="Email" required>
               <!-- <span><i class="fa fa-envelope"></i></span> -->
             </div>
             <!-- </div> -->
 
             <div class="form-group">
               <!-- <label for="exampleInputPassword1">Password</label> -->
-              <input type="password" class="form-control" id="password-input" placeholder="Password">
+              <input type="password" class="form-control" id="password-input" placeholder="Password" required>
             </div>
             <button type="submit" class="btn btn-default" id="login">
               <div class="pvw-title"><span><i class="fa fa-long-arrow-right"></span></i></div>
