--- a/public/members.html
+++ b/public/members.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Passport Authentication</title>
+  <title>Members</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
@@ -11,27 +11,32 @@
 
 <body>
   <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/logout">
-        Logout
-      </a>
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/logout">
+          Logout
+        </a>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
   <div class="container">
+
     <div class="row">
-      <div class="col-md-6 col-md-offset-6">
-        <h2>Welcome <span class="member-name"></span></h2>
-      </div>
-      <div class="d-grid gap-2">
-        <!-- <button class="btn fav-button btn-primary" type="button">Favorites</button> -->
-        <a href="/home"><button class="btn">Favorites</button></a>
-        <!-- <a href="/"><button class="btn"></button></a>
-        <a href="/"><button class="btn"></button></a> -->
+      <div class="col-sm-12">
+        <!-- <div class=" col-md-6 col-md-offset-6">  -->
+        <h2><span id="hand">&#128075;</span> Welcome <span class="member-name"></span></h2>
+        <a href="/home"><button class="btn-primary">Go to Favorites</button></a>
       </div>
     </div>
   </div>
+  <!-- <div class="row"> -->
+  <!-- <button class="btn fav-button btn-primary" type="button">Favorites</button> -->
+  <!-- <a href="/"><button class="btn"></button></a>
+        <a href="/"><button class="btn"></button></a> -->
+  <!-- </div> -->
+  <!-- </div> -->
+  <!-- </fieldset> -->
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
